# diplo-module-1

./: README.md  pyproject.toml
.binder/: Dockerfile
.github/workflows/: build.yml  build_pdf.yml
_static/: analytics_gtag.js
book/: _config.yml
book/_static/: Luminous.min.js  analytics.js  analytics_gtag.js  codemirror_themes.css  luminous-basic.min.css  theme.js  theme_patches.css
book/chapters/: 00_how_to_use.ipynb  01_markdown.md  02_jupyter.ipynb
